--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ ol {
 body {
   font-family: Arial, Helvetica, sans-serif;
   height: 100vh;
-  background-image: linear-gradient(to bottom, black, grey);
+  background-image: linear-gradient(to bottom, rgb(112, 112, 112), rgb(218, 218, 218));
 }
 
 main {
